--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
-@import url("star.css");
+/*@import url("star.css");*/
 @import url("section/top.css");
 @import url("section/about.css");
 @import url("section/project.css");
 @import url("section/skill.css");
 @import url("section/footer.css");
 
-@media  (max-width:  400px)
-                   and (orientation : portrait){
-			
+@media (max-width:  400px)
+       and (orientation : portrait){
  #skill{
        width: 85%;
         margin: 0 auto;
@@ -18,17 +17,17 @@
 	top:20%;                      
 	text-align: center;                   
 }                   
-	.top-container p{                      
+.top-container p{                      
 	  font-size: 13px;                   
-	  }                    
-	  .project-image{                                  
-		width:100%                     
-		height:auto;                  
-		}                     
-		.container{                        
-		  margin:0 auto;                      
-		  font-size:15px;            
-		  width:85%;            
+}                    
+.project-image{                                  
+  width:100%;                  
+  height:auto;                  
+}                     
+.container{                        
+    margin:0 auto;                      
+    font-size:15px;            
+	width:85%;            
 }            
 p.footer-text{
    font-size: 12px;
