--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
-/*@import url("star.css");*/
+@import url("star.css");
 @import url("section/top.css");
 @import url("section/about.css");
 @import url("section/project.css");
